# progetto-robotici

./: .gitignore  CMakeLists.txt  constants.h  fplus-fix.h  ga-example.cpp  main.cpp  params.h  utility.h
cmake/: FindGALIB.cmake
common/: BNGenome.cpp  BNGenome.h  CMakeLists.txt  Experiment.h  FileLogger.cpp  FileLogger.h
controllers/: CMakeLists.txt  rbn_controller.h
controllers/fake/: CMakeLists.txt  fake_controller.h
controllers/rbn-controller/: BNController.cpp  BNController.h  BooleanNetwork.cpp  BooleanNetwork.h  CMakeLists.txt  FootbotUtils.h
controllers/rbn-controller/lua-wrapper/: LuaBoolNetController.cpp  LuaBoolNetController.h
controllers/rbn-controller/serializer/: BooleanNetworkParser.h
genetic/: BNGenome.cpp  BNGenome.h  CMakeLists.txt  Performance.h  experiment.argos  main.cpp
genetic/parallel/: CMakeLists.txt  ParallelEvaluator.cpp  ParallelEvaluator.h  SharedMemory.cpp  SharedMemory.h  parallel.cpp
genetic/sequential/: CMakeLists.txt  sequential.cpp
loop-functions/: CMakeLists.txt
loop-functions/evolution/: CMakeLists.txt  Circle.h  evolution_loop.cpp  evolution_loop.h
performance/: readme.txt
robotics-viz/: .gitignore  requirements.txt  visualization.ipynb
tests/: CMakeLists.txt  argos-robot.lua  boolean-networks.lua  compare.argos  compare.cpp  ev-test-gui.argos  ev-test.argos  main.cpp  placeholder.lua  test_single.cpp  utilities.lua  visualize.cpp
tests/libs/: lambda.lua  lua-collections.lua
utility/: BetterRandom.h  CMakeLists.txt  Matrix.h  NewRandom.cpp  NewRandom.h  Printable.h  Utility.cpp  Utility.h
